Added login option

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
-#Fri Apr 29 10:27:01 CEST 2016
+#Fri Apr 29 14:34:16 CEST 2016
 encoding//Resources/StyleSheets/custom.css=UTF-8
 encoding//Resources/StyleSheets/ccSearch.css=UTF-8
 eclipse.preferences.version=1
 encoding//Resources/StyleSheets/bootstrap-extended.css=UTF-8
+encoding//Resources/StyleSheets/ccLogin.css=UTF-8
 encoding//Resources/Files/en_basic.properties=UTF-8
