--- a/Resources/Files/en_basic.properties
+++ b/Resources/Files/en_basic.properties
@@ -11,6 +11,8 @@ menu.top.configuration=Administration
 menu.top.configuration.properties=Properties
 menu.top.configuration.languages=Languages
 menu.top.homepage=Homepage
+menu.top.login=Sign-in
+menu.top.logout=Sign-out
 
 pager.collapse=Collapse
 pager.expand=Expand
