Added bean to collect system information (e.g. ACL, read/write)

--- a/AppProperties/database.properties
+++ b/AppProperties/database.properties
@@ -2,10 +2,10 @@
 <database xmlns='http://www.lotus.com/dxl' version='9.0' maintenanceversion='1.5'
  replicaid='C1257FA3003CC53A' path='CN=dev1/O=quintessens!!apps\quintessens\XPagesBoilerplate.nsf'
  title='XPagesBoilerplate'>
-<databaseinfo dbid='C1257FA3003CC53A' odsversion='43' diskspace='11796480'
- percentused='89.1861979166667' numberofdocuments='2'><datamodified><datetime
- dst='true'>20160428T171754,83+02</datetime></datamodified><designmodified
-><datetime dst='true'>20160428T215503,79+02</datetime></designmodified></databaseinfo>
+<databaseinfo dbid='C1257FA3003CC53A' odsversion='43' diskspace='12058624'
+ percentused='90.4020889945652' numberofdocuments='130'><datamodified><datetime
+ dst='true'>20160429T153506,77+02</datetime></datamodified><designmodified
+><datetime dst='true'>20160504T103046,95+02</datetime></designmodified></databaseinfo>
 <acl adminserver='CN=dev1/O=quintessens' maxinternetaccess='editor'>
 <role>[Admin]</role>
 <role>[Editor]</role>
@@ -16,7 +16,9 @@
 <aclentry name='LocalDomainServers' type='servergroup' level='manager' deletedocs='true'/>
 <aclentry name='CN=dev1/O=quintessens' type='server' level='manager' deletedocs='true'/>
 <aclentry name='CN=Patrick Kwinten/O=quintessens' type='person' level='manager'
- deletedocs='true'/>
+ deletedocs='true'>
+<role>[Admin]</role></aclentry>
+<logentry>2016/04/29 11:42:52 AM Patrick Kwinten/quintessens updated Patrick Kwinten/quintessens</logentry>
 <logentry>2016/04/28 09:53:54 PM Patrick Kwinten/quintessens updated role [Editor]</logentry>
 <logentry>2016/04/28 09:53:54 PM Patrick Kwinten/quintessens updated role [Admin]</logentry>
 <logentry>2016/04/28 05:13:40 PM Patrick Kwinten/quintessens added Anonymous</logentry>
@@ -27,14 +29,15 @@
 <logentry>2016/04/28 01:03:46 PM Patrick Kwinten/quintessens added Patrick Kwinten/quintessens</logentry>
 <logentry>2016/04/28 01:03:46 PM Patrick Kwinten/quintessens updated -Default-</logentry></acl>
 
-<fulltextsettings size='54196' update='immediate' includeencryptedfields='false'><lastindexed
-><datetime>20160428T193348,55+00</datetime></lastindexed></fulltextsettings>
+<fulltextsettings size='120253' update='immediate' includeencryptedfields='false'><lastindexed
+><datetime>20160502T075737,79+00</datetime></lastindexed></fulltextsettings>
+<launchsettings><weblaunch whenopened='openxpage' xpage='index.xsp'/></launchsettings>
 <note default='true' class='icon'>
-<noteinfo noteid='11a' unid='0558EDAF35F0AADAC1257FA3003CC53D' sequence='8'>
+<noteinfo noteid='11a' unid='0558EDAF35F0AADAC1257FA3003CC53D' sequence='10'>
 <created><datetime dst='true'>20160428T130346,53+02</datetime></created>
-<modified><datetime dst='true'>20160428T215503,79+02</datetime></modified>
-<revised><datetime dst='true'>20160428T215503,78+02</datetime></revised>
-<lastaccessed><datetime dst='true'>20160428T215503,79+02</datetime></lastaccessed>
+<modified><datetime dst='true'>20160429T110443,32+02</datetime></modified>
+<revised><datetime dst='true'>20160429T110443,31+02</datetime></revised>
+<lastaccessed><datetime dst='true'>20160429T110443,32+02</datetime></lastaccessed>
 <addedtofile><datetime dst='true'>20160428T130346,57+02</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=Patrick Kwinten/O=quintessens</name></updatedby>
 <item name='IconBitmap' summary='true'>
@@ -56,10 +59,12 @@ AAAAUEECICABAAD/////+A4DgA==
 <item name='$TemplateModTime'><datetime dst='true'>20160428T215322,44+02</datetime></item>
 <item name='$TemplateServerName'><text>CN=Patrick Kwinten/O=quintessens</text></item>
 <item name='$TemplateFileName'><text>CN=dev1/O=quintessens!!apps\others\xpage\ml4xpages.nsf</text></item>
-<item name='$DefaultXPage'><text>homepage.xsp</text></item>
 <item name='$Daos'><text>0</text></item>
-<item name='$Flags'><text>J</text></item>
 <item name='$TITLE'><text>XPagesBoilerplate
-</text></item></note>
+</text></item>
+<item name='$Flags'><text>J!</text></item>
+<item name='$LaunchXPageRunOnServer'><text>0</text></item>
+<item name='$FlagsNoRefresh'><text/></item>
+<item name='$DefaultXPage'><text>index.xsp</text></item></note>
 </database>
 
